[package]
name = "dash-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
debug_print = "1.0.0"
iso8601-duration = "0.2.0"

reqwest = {version = "0.12.4", features = ["blocking"]}
roxmltree = "=0.1.0"
sprintf = "0.3.0"
